unit_tests/preprocessor/errors/redefinition-line.correct
preprocessor/errors/redefinition-line:1: warning: '__LINE__' already defined
